# Zeus

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260503_0001_phase1_core_schema.py  20260503_0002_phase2_events_watchlist.py  20260503_0003_phase3_calibration_drift.py  20260503_0004_phase3_governance.py  20260503_0005_phase4_adversarial.py  20260503_0006_phase45_news_events.py  20260503_0007_phase5_alert_agent.py  (+11 more)
backend/app/: __init__.py  main.py
backend/tests/: test_adversarial.py  test_alert_agent.py  test_api_payload_contracts.py  test_backtest_correctness.py  test_calibration.py  test_calibration_dashboard.py  test_calibration_updater.py  test_causal_web.py  test_contracts.py  test_cost_models.py  test_data_sources.py  test_drift_monitor.py  test_etl_writers.py  test_event_intelligence.py  test_events.py  test_governance.py  test_health.py  test_list_query_contracts.py  test_llm.py  test_llm_controls.py  test_market_data_api.py  test_migrations.py  test_news_events_api.py  test_news_pipeline.py  test_notebook_api.py  test_phase6_positions_attribution.py  test_pipeline_handlers.py  test_recommendations_api.py  test_reflection_agent.py  test_regime_detector.py  test_risk.py  test_scenarios.py  test_scheduler.py  test_schema_contracts.py  test_scoring.py  test_settings_api.py  test_shadow_phase9.py  test_shadow_tracker.py  test_signal_evaluators.py  test_trade_plan_activation.py  (+4 more)
docs/: ARCHITECTURE.md  (+9 more)
(+309 files in other folders)
