[project]
name = "zeus-backend"
version = "0.1.0"
description = "FastAPI backend for Zeus, a commodity futures research and decision platform."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
  "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "alembic>=1.14.0,<2.0.0",
  "redis[hiredis]>=5.2.0,<6.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "httpx>=0.28.0,<0.29.0",
  "pandas>=2.2.3,<3.0.0",
  "numpy>=2.2.0,<3.0.0",
  "scipy>=1.14.1,<2.0.0",
  "statsmodels>=0.14.4,<0.15.0",
  "apscheduler>=3.11.0,<4.0.0",
]

[project.optional-dependencies]
quant = [
  "vectorbt>=0.27.0,<0.28.0",
  "dowhy>=0.12.0,<0.13.0",
  "akshare>=1.15.0",
  "tushare>=1.4.0",
]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.25.0,<0.26.0",
  "ruff>=0.8.4,<0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
